Reworked the mod to replace equipment instead of dealing with the character_running_modifier

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,13 @@
 turtle_speed_on=Turtle Speed On
 turtle_speed_off=Turtle Speed Off
 
+turtle_speed_equipement_prefix=Turtled __1__
+
 [controls]
 turtle_speed_hotkey=Turtle Speed
+
+[mod-setting-name]
+Turtle_Speed_minimum_modifiers=Minimum Speed Modifiers
+
+[mod-setting-description]
+Turtle_Speed_minimum_modifiers=This will be the amount of speed modifying equipment that will stay on during Turtle Speed mode.
